--- a/app/src/main/res/layout/main_layout.xml
+++ b/app/src/main/res/layout/main_layout.xml
@@ -16,11 +16,18 @@
     android:layout_margin="5dp"
     android:text="ViewPager加载View"/>
 
-    <Button
-      android:id="@+id/load_fragment"
-      android:layout_width="match_parent"
-      android:layout_height="60dp"
-      android:layout_margin="5dp"
-      android:text="ViewPager加载Fragment"/>
+  <Button
+    android:id="@+id/load_fragment"
+    android:layout_width="match_parent"
+    android:layout_height="60dp"
+    android:layout_margin="5dp"
+    android:text="ViewPager加载Fragment"/>
+
+  <Button
+    android:id="@+id/load_fragment_navi"
+    android:layout_width="match_parent"
+    android:layout_height="60dp"
+    android:layout_margin="5dp"
+    android:text="ViewPager加载Fragment和底部导航"/>
 
 </LinearLayout>
