--- a/app/src/main/res/layout/navi_bar.xml
+++ b/app/src/main/res/layout/navi_bar.xml
@@ -3,6 +3,7 @@
   android:layout_width="match_parent"
   android:layout_height="wrap_content"
   android:layout_marginTop="5dp"
+  android:paddingBottom="25dp"
   android:orientation="horizontal">
 
   <LinearLayout
