--- a/app/src/main/res/layout/fragment_tab_layout.xml
+++ b/app/src/main/res/layout/fragment_tab_layout.xml
@@ -1,24 +1,22 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+  xmlns:tools="http://schemas.android.com/tools"
   android:layout_width="match_parent"
   android:layout_height="match_parent"
   xmlns:app="http://schemas.android.com/apk/res-auto"
-  android:orientation="vertical">
+  android:orientation="vertical"
+  tools:context=".fragment.TabLayoutFragment">
+
+  <com.google.android.material.tabs.TabLayout
+    android:id="@+id/fragment_tab_layout"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    app:tabMode="auto" />
 
   <androidx.viewpager.widget.ViewPager
-    android:id="@+id/vp_navi2"
+    android:id="@+id/fragment_tab_vp"
     android:layout_width="match_parent"
     android:layout_height="0dp"
     android:layout_weight="1"/>
 
-  <com.google.android.material.bottomnavigation.BottomNavigationView
-    android:id="@+id/bottom_menu"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:paddingBottom="15dp"
-    android:paddingTop="15dp"
-    app:menu="@menu/bottom_menu"
-    app:labelVisibilityMode="labeled"
-    />
-  
 </LinearLayout>
